traces/bug_35.txt
src/medit/util.c:30: error: DEAD_STORE
  The value written to &font_style (type void*) is never used.
Showing all 1 steps of the trace


src/medit/util.c:30:5: Write of unused value
28.     }
29.     else if (strcmp(name, "times roman") == 0) {
30.       font_style = GLUT_BITMAP_TIMES_ROMAN_10;
          ^
31.       if (size == 24)
32.         font_style = GLUT_BITMAP_TIMES_ROMAN_24;
